[gd_scene load_steps=9 format=3 uid="uid://nrn6j5ux1nx4"]

[ext_resource type="Script" path="res://Nodes/NumberPlanetNode/number_planet.gd" id="1_c882b"]
[ext_resource type="ArrayMesh" path="res://Resources/NumbersLevelAssets/Star/Star_Cylinder.res" id="2_gl6ou"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7qt81"]
friction = 0.5
bounce = 0.25

[sub_resource type="SphereShape3D" id="SphereShape3D_1q05i"]
radius = 0.9

[sub_resource type="SphereShape3D" id="SphereShape3D_iuwmt"]
radius = 0.6

[sub_resource type="Animation" id="Animation_n3tru"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icosphere:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ad66c"]
resource_name = "planet_rotation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icosphere:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_35g01"]
_data = {
"RESET": SubResource("Animation_n3tru"),
"planet_rotation": SubResource("Animation_ad66c")
}

[node name="NumberPlanet" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_7qt81")
script = ExtResource("1_c882b")
max_hold_size = 0.85

[node name="Icosphere" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_gl6ou")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_1q05i")

[node name="RigidyShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_iuwmt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_35g01")
}
autoplay = "planet_rotation"
speed_scale = 0.2

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
